--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,7 @@
 [
 {sms, [
-{username, "muswawir"},
-{password, "icui4cuu"},
-{sender, "Palxie"}
+{username, "username"},
+{password, "password"},
+{sender, "sender"}
 ]}
 ].
